test css vercel

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
         }
     },
     "routes": [
+        { 
+            "src": "/public/css/(.*)", 
+            "dest": "/public/css/$1" 
+        },
         {
             "src": "/build/(.*)",
             "dest": "/build/$1"
