--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,9 @@
     "routes": [
         { 
             "src": "/public/css/(.*)", 
+            "headers": {
+                "cache-control": "public, max-age=31536000, inmutable"
+            },
             "dest": "/public/css/$1" 
         },
         {
