--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "routes": [
         { 
             "src": "/public/css/(.*)", 
-            "dest": "/public/css/.*" 
+            "dest": "/public/css/$1" 
         },
         {
             "src": "/build/(.*)",
