--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "runtime": "vercel-php@0.6.0" 
         }
     },
-
+    "regions": ["gru1"],
     "routes": [
         { 
             "src": "/css/(.*)", 
